<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"


    android:layout_height="match_parent">


    <TextView
                style="@style/TextStyleFont"
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:text="@string/welcome_audio"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_welcome"
        app:layout_constraintTop_toTopOf="@id/tv_welcome"
        android:background="@drawable/ic_audio_off"
        android:clickable="true"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:layout_weight="1">

                <TextView
                style="@style/TextStyleFont"
                    android:id="@+id/tv_take_tour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/skopje"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/iv_take_tour"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_below="@id/tv_take_tour"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/map_big"
                    android:clickable="true"
                    android:padding="16dp"
                    android:tint="@color/colorPrimary" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_weight="1">

                <TextView
                style="@style/TextStyleFont"
                    android:id="@+id/tv_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/other_cities"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/iv_tips"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_below="@id/tv_tips"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/tips_big"
                    android:padding="16dp"
                    android:tint="@color/colorPrimary" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_weight="1">

                <TextView
                style="@style/TextStyleFont"
                    android:id="@+id/tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/news"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tv_share"
                    android:background="@drawable/share_big"
                    android:padding="20dp"
                    android:tint="@color/colorPrimary" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_weight="1">

                <TextView
                style="@style/TextStyleFont"
                    android:id="@+id/tv_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/good_to_know"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/iv_video"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tv_video"
                    android:background="@drawable/camera_big"
                    android:padding="20dp"
                    android:tint="@color/colorPrimary" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>