<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".TourDetailActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_marginEnd="16dp"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/iv_tour_list"
                app:layout_constraintEnd_toStartOf="@id/iv_audio"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_audio_off"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintEnd_toStartOf="@id/iv_map"
                app:layout_constraintTop_toTopOf="@id/tv_title" />

            <ImageView
                android:id="@+id/iv_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_location_pin"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title" />

            <com.hgosot.skopje.ImageHorizontalListLayout
                android:id="@+id/iv_tour_list"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <ImageView
                android:id="@+id/iv_tour"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="@id/iv_tour_list"
                app:layout_constraintStart_toStartOf="@id/iv_tour_list"
                app:layout_constraintTop_toBottomOf="@id/iv_tour_list" />

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_left"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:scrollbars="vertical"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/iv_location"
                app:layout_constraintTop_toTopOf="@id/iv_location"
                app:layout_constraintBottom_toBottomOf="@id/iv_location" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:text="TextView"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/iv_location"
                app:layout_constraintEnd_toEndOf="@id/iv_tour"
                app:layout_constraintTop_toBottomOf="@id/iv_location" />

            <ImageView
                android:id="@+id/iv_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_arrow_left"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_location" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_history_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:scrollbars="vertical"
                android:text="@string/history"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/iv_history"
                app:layout_constraintStart_toEndOf="@id/iv_history"
                app:layout_constraintTop_toTopOf="@id/iv_history" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:text="TextView"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/iv_tour"
                app:layout_constraintStart_toEndOf="@id/iv_history"
                app:layout_constraintTop_toBottomOf="@id/iv_history" />

            <ImageView
                android:id="@+id/iv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_arrow_left"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_history" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_author_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:scrollbars="vertical"
                android:text="@string/author"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/iv_author"
                app:layout_constraintStart_toEndOf="@id/iv_author"
                app:layout_constraintTop_toTopOf="@id/iv_author" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:text="TextView"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/iv_tour"
                app:layout_constraintStart_toEndOf="@id/iv_author"
                app:layout_constraintTop_toBottomOf="@id/iv_author" />

            <ImageView
                android:id="@+id/iv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_arrow_left"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_author" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:scrollbars="vertical"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/iv_description"
                app:layout_constraintStart_toEndOf="@id/iv_description"
                app:layout_constraintTop_toTopOf="@id/iv_description" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:text="TextView"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/iv_tour"
                app:layout_constraintStart_toEndOf="@id/iv_description"
                app:layout_constraintTop_toBottomOf="@id/iv_description" />

            <ImageView
                android:id="@+id/iv_interior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_arrow_left"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_interior_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:scrollbars="vertical"
                android:text="@string/interior"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/iv_interior"
                app:layout_constraintStart_toEndOf="@id/iv_interior"
                app:layout_constraintTop_toTopOf="@id/iv_interior" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_interior"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:text="TextView"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/iv_tour"
                app:layout_constraintStart_toEndOf="@id/iv_interior"
                app:layout_constraintTop_toBottomOf="@id/iv_interior" />

            <ImageView
                android:id="@+id/iv_meaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_arrow_left"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_interior" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_meaning_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:scrollbars="vertical"
                android:text="@string/meaning"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/iv_meaning"
                app:layout_constraintStart_toEndOf="@id/iv_meaning"
                app:layout_constraintTop_toTopOf="@id/iv_meaning" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_meaning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:text="TextView"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/iv_tour"
                app:layout_constraintStart_toEndOf="@id/iv_meaning"
                app:layout_constraintTop_toBottomOf="@id/iv_meaning" />

            <TextView
                style="@style/TextStyleFont"
                android:id="@+id/tv_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:text="TextView"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/iv_tour"
                app:layout_constraintEnd_toEndOf="@id/iv_tour"
                app:layout_constraintTop_toBottomOf="@id/tv_meaning" />

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_content" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_bg_regular"
        android:minHeight="38dp"
        android:text="Next"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_bg_regular"
        android:minHeight="38dp"
        android:text="play"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>